# quant-research-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  backtester.py  binance_ohlc_downloader.py  gen_synthetic.py  indicators_tradingview.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  parity.yml  publish-pypi.yml
backtester/: __init__.py  __main__.py  bootstrap.py  dsr.py  haircut.py  invariants.py  ledger.py  metrics.py  multitest.py  objectives.py  opt_surface.py  orchestrator.py  overfit_report.py  pbo.py  volume_indicators.py
backtester/carry/: __init__.py  basis.py  funding.py  oi.py  onchain.py  scheduler.py  triggers.py
backtester/carry/models/: __init__.py  base.py  momentum.py  oi_cointegration.py  persistent_sign.py
backtester/pairs/: __init__.py  cadence.py  eligibility.py  screener.py  spread.py  stops.py
backtester/panel/: __init__.py  constraints.py  loader.py  neutralize.py  orchestrator.py  regime.py  sizing.py
backtester/panel/strategies/: __init__.py  long_short.py
binder/: requirements.txt
data/: README.md
docs/: TODO.md  api.rst  conf.py  index.rst
docs/baselines/: README.md  v0.4.0_ds_sol_1k.json  v0.4.0_ds_sol_1k_raw.txt  v0.4.0_parity_check_stdout.txt  v0.4.0_parity_forex_stdout.txt  v0.4.0_parity_regime_stdout.txt
docs/schemas/: trade_log_v1.json
docs/verification/: README.md  item01.md  item02.md  item03.md  item04.md  item05.md  item05_iter.md  item06.md  item07.md  item08.md  item14.md  item44.md  item45.md  item46.md  phase2_rust_catchup.md  phase3_carry_python.md  phase3_pairs_python.md
examples/: README.md  volume_strategies.py
examples/atr_cross/: atr_cross.py
examples/batch_runner/: run_batch.py
examples/end_to_end/: end_to_end.py
examples/ml_callback/: ml_callback.py
examples/ml_precomputed/: ml_precomputed.py
examples/ml_regime_kmeans/: ml_regime_kmeans.py
examples/ml_sklearn/: ml_logreg.py  ml_random_forest.py
examples/notebook/: walkthrough.ipynb
examples/regime_custom/: regime_custom.py
listings/: impl_risk_experiment.py  lah_demo.py
results/: README.md
runner/: README.md  requirements.txt  run_strategies.py
tests/: conftest.py  test_behavioural.py  test_carry_audit_followups.py  test_carry_basis.py  test_carry_funding.py  test_carry_models.py  test_carry_oi.py  test_carry_onchain.py  test_carry_scheduler.py  test_carry_triggers.py  test_config_isolation.py  test_detector_fit_invariant.py  test_dispatch_routes.py  test_invariants.py  test_invariants_property.py  test_ml_examples_smoke.py  test_ml_signals.py  test_objective_multi_term.py  test_overfit_gapfill.py  test_pairs_cadence.py  test_pairs_eligibility.py  test_pairs_screener.py  test_pairs_spread.py  test_pairs_stops.py  test_panel_basket.py  test_panel_constraints.py  test_panel_loader.py  test_panel_neutralize.py  test_panel_orchestrator.py  test_panel_sizing.py  test_regime_api.py  test_wfo_regime_smoke.py
tests/fixtures/: basis_btc_perp_spot_1d.parquet  build_panel.py  build_phase3.py  funding_btcusdt_200evt.parquet  oi_btc_perp_1h_7d.parquet  onchain_nvt_50d.csv  pair_btc_eth_1h_1500.parquet  panel_sol_btc_eth_1h_1000.parquet  sol_1h_30000_31000.csv
tests/fixtures/sources/: BTCUSDT_1h_jan_feb_2024.csv  BTCUSDT_1h_pair_q3_2023.csv  ETHUSDT_1h_jan_feb_2024.csv  ETHUSDT_1h_pair_q3_2023.csv
tools/: leak_demo.py  render_surface.py
