[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-framework"
version = "0.6.0"
description = "Walk-forward backtester with statistical validation and robustness testing for systematic trading strategies."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Vieira Gatto", email = "77agdg@gmail.com" }]
keywords = ["backtesting", "walk-forward", "quant", "research", "trading"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "pytz",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]
examples = ["scikit-learn"]
# Item #1 (v0.6.0): IS objective-surface emit/renderer. plotly for the
# isosurface renderer; pyarrow for the Parquet surface output.
surface = ["plotly", "pyarrow"]
# Item #1 (Phase 2): multi-asset panel plugin. xarray for the
# time x asset x field N-D dataset; pyarrow for the bundled
# DS-PANEL-3 Parquet fixtures. Pulled only when the user opts into
# the panel plugin via `pip install quant-research-framework[panel]`.
panel = ["xarray>=2024.0", "pyarrow>=14.0", "scipy>=1.10"]
# Item #9-#13 (Phase 3 pairs). Engle-Granger / Johansen / ADF via
# statsmodels. Pulled when the user opts into the pairs plugin.
pairs = ["xarray>=2024.0", "pyarrow>=14.0", "scipy>=1.10", "statsmodels>=0.14"]
# Items #38-#43 (Phase 3 carry). Funding/basis/OI/on-chain loaders +
# signal-model library. Only stdlib + numpy + pandas + pyarrow are
# actually needed; we declare pyarrow for the bundled Parquet
# fixtures so the extras line is self-contained.
carry = ["pyarrow>=14.0"]

[project.urls]
Homepage = "https://github.com/DaruFinance/quant-research-framework"
"Rust port" = "https://github.com/DaruFinance/quant-research-framework-rs"

[tool.setuptools]
packages = ["backtester", "backtester.panel", "backtester.panel.strategies", "backtester.pairs", "backtester.carry", "backtester.carry.models"]
py-modules = ["indicators_tradingview", "gen_synthetic", "binance_ohlc_downloader"]
